--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "4.17.11"
+  },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "@types/underscore": "1.8.18",
